Bug 335068: Firefox and Thunderbird windows grouped under "Mozilla" rather than in separate groups, patch by Tuukka Tolvanen <tuukka.tolvanen@gmail.com>, r+sr=roc